# integrations-lead-tech-test

./: .gitignore  CMakeLists.txt  README.md  Resource.h  Untitled Diagram.drawio  WindowsAPIProject.cpp  WindowsAPIProject.rc  WindowsAPIProject.sln  WindowsAPIProject.vcxproj  WindowsAPIProject.vcxproj.filters  framework.h
